--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-  image: "/images/darius-soodmand.jpg"
+  image: "/assets/images/darius-soodmand.jpg"
 ---
