--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 author_profile: true
-header:
-  image: "/assets/images/darius-soodmand.jpg"
+<!-- header:
+  image: "/assets/images/darius-soodmand.jpg" -->
 ---
